Setup JwtBearerDefaults.AuthenticationScheme

--- a/StudentManagementApi/appsettings.json
+++ b/StudentManagementApi/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=studentManagement;User Id=dev;Password=dev123"
+  },
+  "Jwt": {
+    "Key": "hakunamatata",
+    "Issuer": "lexpierini",
+    "Audience": "lexpierini"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
