Security conditions for API StudentsController

--- a/StudentManagementApi/appsettings.json
+++ b/StudentManagementApi/appsettings.json
@@ -3,7 +3,8 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=studentManagement;User Id=dev;Password=dev123"
   },
   "Jwt": {
-    "Key": "hakunamatata",
+    // Must be composed of alphanumerical characters. Special characters can also be entered
+    "Key": "hakunamatata#2022",
     "Issuer": "lexpierini",
     "Audience": "lexpierini"
   },
